Name:                tag-stream
Version:             0.1.0
Synopsis:            streamlined html tag parser
-- Description:         
Homepage:            http://github.com/yihuang/tag-stream
License:             BSD3
License-file:        LICENSE
Author:              yihuang
Maintainer:          yi.codeplayer@gmail.com
Category:            Web
Build-type:          Simple
Extra-source-files:  Test.hs
Cabal-version:       >=1.2

Library
  GHC-Options:       -Wall -O2
  Exposed-modules:     Text.HTML.TagStream
                     , Text.HTML.TagStream.Parser
  Other-modules:       Text.HTML.TagStream.Types
                     , Text.HTML.TagStream.Stream
  Build-depends:       base
                     , bytestring
                     , attoparsec
                     , enumerator

  -- Build-tools:         
