Name:                tagstream-conduit
Version:             0.5.0
Synopsis:            streamlined html tag parser
Description:
    Tag-stream is a library for parsing HTML//XML to a token stream.
    It can parse unstructured and malformed HTML from the web.
    It also provides an Enumeratee which can parse streamline html, which means it consumes constant memory.

    You can start from the `tests/Tests.hs` module to see what it can do.
Homepage:            http://github.com/yihuang/tagstream-conduit
License:             BSD3
License-file:        LICENSE
Author:              yihuang
Maintainer:          yi.codeplayer@gmail.com
Category:            Web, Conduit
Build-type:          Simple
Extra-source-files:    tests/Tests.hs
                     , Highlight.hs
                     , Parse.hs
Cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/yihuang/tagstream-conduit

Library
  GHC-Options:       -Wall
  Exposed-modules:     Text.HTML.TagStream
                     , Text.HTML.TagStream.ByteString
                     , Text.HTML.TagStream.Text
                     , Text.HTML.TagStream.Types
  Build-depends:       base >= 4 && < 5
                     , bytestring
                     , text
                     , conduit >= 0.5 && < 0.6
                     , attoparsec
                     , blaze-builder
                     , blaze-builder-conduit >= 0.5 && < 0.6

test-suite test
    hs-source-dirs: tests
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    build-depends:     base >= 4 && < 5
                     , bytestring
                     , text
                     , conduit >= 0.0.2
                     , QuickCheck
                     , HUnit
                     , hspec
                     , tagstream-conduit
    ghc-options:     -Wall
