Name:                dtd
Version:             0.6.1.1
Synopsis:            Parse and render DTD files
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Parse and render DTD files

Library
  Exposed-modules:     Data.DTD.Types.Unresolved
                       Data.DTD.Parse.Unresolved
                       Data.DTD.Types
                       Data.DTD.Parse
                       Data.DTD.Render
                       Data.DTD.Cache
  Build-depends:       base                     >= 4          && < 5
                     , text                     >= 0.11
                     , containers               >= 0.2
                     , xml-conduit              >= 1.0        && < 1.1
                     , uri-conduit              >= 0.5        && < 0.6
                     , transformers             >= 0.2
                     , xml-types                >= 0.3        && < 0.4
                     , attoparsec               >= 0.10       && < 0.11
                     , monad-control            >= 0.3        && < 0.4
                     , xml-catalog              >= 0.8        && < 0.9
                     , blaze-builder            >= 0.3        && < 0.4
                     , network                  >= 2.2
                     , resourcet                >= 0.3        && < 0.5
                     , conduit                  >= 0.5        && < 0.6
                     , attoparsec-conduit       >= 0.5        && < 0.6
                     , lifted-base              >= 0.1        && < 0.2
  Ghc-options: -Wall
