Name:                dtd
Version:             1.1.0
Synopsis:            Parse and render DTD files
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Parse and render DTD files

Library
  Exposed-modules:     Data.DTD.Types.Unresolved
                       Data.DTD.Parse.Unresolved
                       Data.DTD.Types
                       Data.DTD.Parse
                       Data.DTD.Render
                       Data.DTD.Cache
  Build-depends:       base                     >= 4          && < 5
                     , text                     >= 0.11
                     , containers               >= 0.2
                     , xml-conduit              >= 1.1        && < 1.2
                     , uri-conduit              >= 1.1        && < 1.2
                     , transformers             >= 0.2
                     , xml-types                >= 0.3        && < 0.4
                     , attoparsec               >= 0.10       && < 0.11
                     , monad-control            >= 0.3        && < 0.4
                     , xml-catalog              >= 1.1        && < 1.2
                     , blaze-builder            >= 0.3        && < 0.4
                     , network                  >= 2.2
                     , resourcet                >= 0.3        && < 0.5
                     , conduit                  >= 1.0        && < 1.1
                     , attoparsec-conduit       >= 1.0        && < 1.1
                     , lifted-base              >= 0.1
  Ghc-options: -Wall
