Name:                html-conduit
Version:             1.3.1
Synopsis:            Parse HTML documents using xml-conduit datatypes.
Description:         This package uses tagstream-conduit for its parser. It automatically balances mismatched tags, so that there shouldn't be any parse failures. It does not handle a full HTML document rendering, such as adding missing html and head tags. Note that, since version 1.3.1, it uses an inlined copy of tagstream-conduit with entity decoding bugfixes applied.
Homepage:            https://github.com/snoyberg/xml
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web, Text, Conduit
Build-type:          Simple
Extra-source-files:  test/main.hs README.md ChangeLog.md
Cabal-version:       >=1.8

Library
  Exposed-modules:     Text.HTML.DOM
  hs-source-dirs:      src, tagstream-conduit
  Build-depends:       base                             >= 4              && < 5
                     , transformers
                     , bytestring
                     , containers
                     , text
                     , resourcet                        >= 1.2
                     , conduit                          >= 1.3
                     , xml-conduit                      >= 1.3
                     , xml-types                        >= 0.3            && < 0.4

                     -- tagstream-conduit deps
                     , data-default
                     , blaze-builder
                     , attoparsec
                     , conduit-extra
                     , case-insensitive

  other-modules:       Text.HTML.TagStream
                       Text.HTML.TagStream.ByteString
                       Text.HTML.TagStream.Entities
                       Text.HTML.TagStream.Text
                       Text.HTML.TagStream.Types
                       Text.HTML.TagStream.Utils

test-suite test
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends:          base
                          , hspec >= 1.3
                          , HUnit
                          , xml-conduit
                          , html-conduit
                          , bytestring
                          , containers

source-repository head
  type: git
  location: git://github.com/snoyberg/xml.conduit
