Name:                html-conduit
Version:             1.3.2.2
Synopsis:            Parse HTML documents using xml-conduit datatypes.
Description:         This package uses tagstream-conduit for its parser. It automatically balances mismatched tags, so that there shouldn't be any parse failures. It does not handle a full HTML document rendering, such as adding missing html and head tags. Note that, since version 1.3.1, it uses an inlined copy of tagstream-conduit with entity decoding bugfixes applied.
Homepage:            https://github.com/snoyberg/xml
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web, Text, Conduit
Build-type:          Simple
Extra-source-files:  test/main.hs README.md ChangeLog.md LICENSE-tagstream-conduit
Cabal-version:       >=1.10

Library
  default-language:    Haskell2010
  Exposed-modules:     Text.HTML.DOM
  other-modules:       Text.HTML.TagStream
  hs-source-dirs:      src
  Build-depends:       base                             >= 4.12           && < 5
                     , transformers
                     , bytestring
                     , containers
                     , text
                     , resourcet                        >= 1.2
                     , conduit                          >= 1.3
                     , xml-conduit                      >= 1.3
                     , xml-types                        >= 0.3            && < 0.4

                     -- tagstream-conduit deps
                     , attoparsec
                     , conduit-extra

test-suite test
    default-language:    Haskell2010
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends:          base
                          , hspec >= 1.3
                          , HUnit
                          , xml-conduit
                          , html-conduit
                          , bytestring
                          , containers
                          , text
                          , deepseq

source-repository head
  type: git
  location: git://github.com/snoyberg/xml.conduit
