Name:                uri-conduit
Version:             0.3.0
Synopsis:            Read and write URIs
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Read and write URIs

Library
  Exposed-modules:     Network.URI.Conduit
                       Network.URI.Conduit.File
  Build-depends:       base                     >= 4          && < 5
                     , conduit                  >= 0.3        && < 0.4
                     , text                     >= 0.5        && < 1.0
                     , transformers             >= 0.2        && < 0.4
                     , bytestring               >= 0.9        && < 0.10
                     , network                  >= 2.2        && < 2.4
                     , containers               >= 0.2        && < 0.5
                     , failure                  >= 0.1        && < 0.3
                     , monad-control            >= 0.3        && < 0.4
                     , system-filepath          >= 0.4.3      && < 0.5
                     , system-fileio            >= 0.3.3      && < 0.4
