Name:                uri-enumerator-http
Version:             0.2.0
Synopsis:            uri-enumerator backend for the http/https schemes
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         uri-enumerator backend for the http/https schemes

Library
  Exposed-modules:     Network.URI.Enumerator.HTTP
  Build-depends:       base                     >= 4          && < 5
                     , enumerator               >= 0.4.14     && < 0.5
                     , text                     >= 0.5        && < 1.0
                     , transformers             >= 0.2        && < 0.3
                     , bytestring               >= 0.9        && < 0.10
                     , network                  >= 2.2        && < 2.4
                     , containers               >= 0.2        && < 0.5
                     , monad-control            >= 0.3        && < 0.4
                     , uri-enumerator           >= 0.2        && < 0.3
                     , failure                  >= 0.1.0.1    && < 0.2
                     , http-types               >= 0.6.5.1    && < 0.7
                     , http-enumerator          >= 0.7.2      && < 0.8
