Name:                uri-enumerator-zip
Version:             0.2.0
Synopsis:            uri-enumerator backend for the zip scheme
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         uri-enumerator backend for the zip scheme

Library
  Exposed-modules:     Network.URI.Enumerator.ZIP
  Build-depends:       base                     >= 4          && < 5
                     , enumerator               >= 0.4.14     && < 0.5
                     , text                     >= 0.5        && < 1.0
                     , transformers             >= 0.2        && < 0.3
                     , bytestring               >= 0.9        && < 0.10
                     , containers
                     , uri-enumerator           >= 0.2        && < 0.3
                     , zip-archive              >= 0.1.1.7    && < 0.2
