Name:                uri-enumerator
Version:             0.0.0
Synopsis:            Read and write URIs
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Library
  Exposed-modules:     Network.URI.Enumerator
                       Network.URI.Enumerator.File
                       Network.URI.Enumerator.HTTP
  Build-depends:       base                     >= 4          && < 5
                     , enumerator               >= 0.4.14     && < 0.5
                     , text                     >= 0.5        && < 1.0
                     , system-filepath          >= 0.4        && < 0.5
                     , system-fileio            >= 0.3        && < 0.4
                     , transformers             >= 0.2        && < 0.3
                     , bytestring               >= 0.9        && < 0.10
                     , network                  >= 2.2        && < 2.4
                     , containers               >= 0.2        && < 0.5
                     , failure                  >= 0.1        && < 0.2
                     , http-types               >= 0.6        && < 0.7
                     , http-enumerator          >= 0.6.6      && < 0.8
                     , monad-control            >= 0.2.0.3    && < 0.3
