Name:                xml-catalog
Version:             0.7.0.1
Synopsis:            Parse XML catalog files
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Parse XML catalog files

Library
  Exposed-modules:     Text.XML.Catalog
  Build-depends:       base                     >= 4          && < 5
                     , text                     >= 0.11       && < 1.0
                     , containers               >= 0.2
                     , xml-conduit              >= 0.7        && < 0.8
                     , uri-conduit              >= 0.4        && < 0.5
                     , conduit                  >= 0.4        && < 0.5
                     , transformers             >= 0.2        && < 0.4
                     , bytestring
  Ghc-options: -Wall
