Name:                xml-catalog
Version:             1.1.0.1
Synopsis:            Parse XML catalog files
Homepage:            http://github.com/snoyberg/xml
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michaels@suite-sol.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Parse XML catalog files

Library
  Exposed-modules:     Text.XML.Catalog
  Build-depends:       base                     >= 4          && < 5
                     , text                     >= 0.11
                     , containers               >= 0.2
                     , xml-conduit              >= 1.1        && < 1.2
                     , uri-conduit              >= 1.1        && < 1.2
                     , conduit                  >= 1.0        && < 1.1
                     , transformers             >= 0.2        && < 0.4
                     , bytestring
  Ghc-options: -Wall
