name:            xml-conduit
version:         1.7.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>, Aristid Breitkreuz <aristidb@googlemail.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Pure-Haskell utilities for dealing with XML with the conduit package.
description:     Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/xml-conduit>.
category:        XML, Conduit
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/snoyberg/xml
extra-source-files: test/main.hs
                    README.md
                    ChangeLog.md

library
    build-depends:   base                      >= 4        && < 5
                   , conduit                   >= 1.3      && < 1.4
                   , conduit-extra             >= 1.3      && < 1.4
                   , resourcet                 >= 1.2      && < 1.3
                   , bytestring                >= 0.10.2
                   , text                      >= 0.7
                   , containers                >= 0.2
                   , xml-types                 >= 0.3.4    && < 0.4
                   , attoparsec                >= 0.10
                   , transformers              >= 0.2      && < 0.6
                   , data-default-class
                   , monad-control             >= 0.3      && < 1.1
                   , blaze-markup              >= 0.5
                   , blaze-html                >= 0.5
                   , deepseq                   >= 1.1.0.0
    exposed-modules: Text.XML.Stream.Parse
                     Text.XML.Stream.Render
                     Text.XML.Unresolved
                     Text.XML.Cursor
                     Text.XML.Cursor.Generic
                     Text.XML
    other-modules:   Text.XML.Stream.Token
    ghc-options:     -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends:          base
                          , containers
                          , text
                          , transformers
                          , bytestring
                          , xml-conduit
                          , hspec >= 1.3
                          , HUnit
                          , xml-types >= 0.3.1
                          , conduit
                          , blaze-markup
                          , resourcet

source-repository head
  type:     git
  location: git://github.com/snoyberg/xml.git
