name:            xml-enumerator
version:         0.4.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michaels@suite-sol.com>, Aristid Breitkreuz <aristidb@googlemail.com>
maintainer:      Michael Snoyman <michaels@suite-sol.com>
synopsis:        Pure-Haskell utilities for dealing with XML with the enumerator package.
description:
    This package provides parsing and rendering functions for XML. It is based on the datatypes found in the xml-types package. This package is broken up into five modules:
    .
    * Parse: Streaming parser, including some streaming parser combinators.
    .
    * Render: Streaming renderer.
    .
    * Document: DOM-based parsing and rendering using xml-types Document/Node datatypes.
    .
    * Resolved: Almost identical to Document, with one major difference: The datatypes here require all entities to be resolved on parsing. This module is much simpler to use than Document. Unless you have specific needs for the former, use this module.
    .
    * Cursor: Provides a higher level interface on top of Resolved for traversing the DOM bidirectionally, similar to XPath.
    .
    Additionally, the xml-hamlet package <http://hackage.haskell.org/package/xml-hamlet> provides a more convenient syntax for creating XML documents.
category:        XML, Enumerator
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/xml-enumerator

flag test
    default: False

library
    build-depends:   base                      >= 4        && < 5
                   , enumerator                >= 0.4.5    && < 0.5
                   , bytestring                >= 0.9      && < 0.10
                   , text                      >= 0.7      && < 0.12
                   , containers                >= 0.2      && < 0.5
                   , xml-types                 >= 0.3      && < 0.4
                   , attoparsec-text-enumerator >= 0.2     && < 0.3
                   , attoparsec-text           >= 0.8.2    && < 0.9
                   , blaze-builder             >= 0.2      && < 0.4
                   , blaze-builder-enumerator  >= 0.2      && < 0.3
                   , transformers              >= 0.2      && < 0.3
                   , failure                   >= 0.1      && < 0.2
    exposed-modules: Text.XML.Stream.Parse
                     Text.XML.Stream.Render
                     Text.XML.Unresolved
                     Text.XML.Cursor
                     Text.XML
    other-modules:   Text.XML.Stream.Token
    ghc-options:     -Wall

executable runtests
    main-is:         runtests.hs
    if flag(test)
        Buildable: True
        Build-depends: base, HUnit, hspec >= 0.3 && < 0.4
    else
        Buildable: False

source-repository head
  type:     git
  location: git://github.com/snoyberg/xml-enumerator.git
